--- a/California_Housing_Prices_modeling.ipynb
+++ b/California_Housing_Prices_modeling.ipynb
@@ -22,6 +22,9 @@
     "colab": {
       "name": "California Housing Prices modeling.ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "AwfqeA-2Ln8D"
+      ],
       "toc_visible": true,
       "include_colab_link": true
     }
@@ -2240,11 +2243,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Nyqnf8SIRfGK",
-        "outputId": "ba41492e-8be3-43cc-ced9-69aa75c1871b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Nyqnf8SIRfGK",
+        "outputId": "ba41492e-8be3-43cc-ced9-69aa75c1871b"
       },
       "source": [
         "print('RMSE :', forest_rmse)"
